issues #1 #2 complete. header-home and header-internal markup

--- a/code/app/index.html
+++ b/code/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>code</title>
+    <title>HOME</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
@@ -12,7 +12,9 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link href='http://fonts.googleapis.com/css?family=Raleway:300,500,400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400italic,700italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="styles/styles.css">
     <!-- endbuild -->
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -23,19 +25,155 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-
-    <div class="hero-unit">
-      <h1>'Allo, 'Allo!</h1>
-      <p>You now have</p>
-      <ul>
-      <li>HTML5 Boilerplate</li>
-      <li>Sass</li>
-      <li>Modernizr</li>
-      </ul>
+    <header class="header-home">
+      <img src="styles/img/logo.png" alt="Vandesign Logo">
+      <nav>
+        <ul>
+          <li><a href="index.html" class="selected">HOME</a></li>
+          <li><img src="styles/img/header-nav-bar.png"</li>
+          <li><a href="work.html">WORK</a></li>
+          <li><img src="styles/img/header-nav-bar.png"</li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><img src="styles/img/header-nav-bar.png"</li>
+          <li><a href="pages.html">PAGES</a></li>
+          <li><img src="styles/img/header-nav-bar.png"</li>
+          <li><a href="blog.html">BLOG</a></li>
+          <li><img src="styles/img/header-nav-bar.png"</li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div>
+      <p>Qormulate progressive resources vis&ndash;a&ndash;vis user&ndash;centric <strong>potentialities tivate</strong> front&ndash;end paradigms after competitive <strong>strategic theme</strong> areas</p>
+      <a href="about.html">
+        <p>More about us</p>
+      </a>
     </div>
-
-
+    <div>
+      <div>
+        <img src="styles/img/ink-drop.png" alt="ink drop"> 
+        <h4>BRAND &amp; IDENTITY</h4>
+        <p>Appropriately benchmark prospective meta-services and client&ndash;centerec relationships. Globally pursue one&ndash;to&ndash;one materials via proactive alignments clicks&ndash;and&ndash;mortar total linkage after 24 &frasl; 365 materials</p>
+      </div>
+      <div>
+        <img src="styles/img/magic-bar.png" alt="magic bar"> 
+        <h4>WEB DEVELOPMENT</h4>
+        <p>Appropriately benchmark prospective meta-services and client&ndash;centerec relationships. Globally pursue one&ndash;to&ndash;one materials via proactive alignments clicks&ndash;and&ndash;mortar total linkage after 24 &frasl; 365 materials</p>
+      </div>
+      <div>
+        <img src="styles/img/camera.png" alt="camera"> 
+        <h4>PHOTOGRAFHY</h4>
+        <p>Appropriately benchmark prospective meta-services and client&ndash;centerec relationships. Globally pursue one&ndash;to&ndash;one materials via proactive alignments clicks&ndash;and&ndash;mortar total linkage after 24 &frasl; 365 materials</p>
+      </div>
+    </div>
+    <div>
+      <nav>
+        <ul>
+          <li>Show all</li>
+          <li>Branding</li>
+          <li>Marketing</li>
+          <li>Motion</li>
+          <li>Photography</li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="http://placehold.it/370x370">
+            <img src="http://placehold.it/370x370" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="http://placehold.it/370x370">
+            <img src="http://placehold.it/370x370" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="http://placehold.it/370x370">
+            <img src="http://placehold.it/370x370" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="http://placehold.it/370x370">
+            <img src="http://placehold.it/370x370" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="http://placehold.it/370x370">
+            <img src="http://placehold.it/370x370" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="http://placehold.it/370x370">
+            <img src="http://placehold.it/370x370" alt="">
+          </a>
+        </li>
+      </ul> 
+    </div>
+    <div>
+      <div>
+        <h3>120</h3>
+        <p>PROJECT COMPLETE</p>
+      </div>
+      <div>
+        <h3>60</h3>
+        <p>CLIENT WORKED WITH</p>
+      </div>
+      <div>
+        <h3>310</h3>
+        <p>CUPS OF COFFEE</p>
+      </div>
+      <div>
+        <h3>18</h3>
+        <p>AWARD WINNING</p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <h4>BEST SERVICES</h4>
+        <p>Dynamically enable vertical collaboration and idea&ndash;sharing whereas standardized scenarios. conveniently negotiate functional methodologies after bleeding&ndash;edge partnerships</p>
+        <a href="pages.html">
+          <p>SERVICES</p>
+        </a>
+          
+      </div>
+      <div>
+        <h4>OUR BLOG</h4>
+        <p>Dynamically enable vertical collaboration and idea&ndash;sharing whereas standardized scenarios. conveniently negotiate functional methodologies after bleeding&ndash;edge partnerships</p>
+        <a href="blog.html">
+          <p>ALL POST</p>
+        </a>
+      </div>
+    </div>
+    <footer>
+      <div>
+        <img src="styles/img/logo.png" alt="Vandesign Logo"> 
+        <h5>GRAPHIC DESIGN &amp; ART DIRECTION</h5>
+        <ul>
+          <li><img src="styles/img/twitter-logo.png" alt="twitter logo"></li>
+          <li><img src="styles/img/be-logo.png" alt="be logo"></li>
+          <li><img src="styles/img/t-logo.png" alt="t logo"></li>
+          <li><img src="styles/img/bol-logo.png" alt="bol logo"></li>
+        </ul>
+      </div>
+      <div>
+        <img src="styles/img/twitter-logo.png" alt="twitter logo"> 
+        <h5>&#64;vandesign</h5>
+        <p>vivamus suscipit tortor eget felis porttitor atc volutpat pellentesque in lipsum</p>
+        <p>http://t.co/UluBPMcyfc</p>
+      </div>
+      <div>
+        <img src="styles/img/instagram-logo.png" alt="instagram logo">
+        <h5>&#35;vandesign</h5>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+      <div>
+        <p>&copy; 2014 Vandesign. All rights reserved.</p>
+      </div>
+    </footer>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
