--- a/code/app/services.html
+++ b/code/app/services.html
@@ -31,11 +31,11 @@
         <ul>
           <li><a href="index.html">HOME</a></li>
           <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="work.html" class="selected">WORK</a></li>
+          <li><a href="portfolio.html">PORTFOLIO</a></li>
           <li><img src="styles/img/header-nav-bar.png"</li>
           <li><a href="about.html">ABOUT</a></li>
           <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="pages.html">PAGES</a></li>
+          <li><a href="services.html" class="selected">SERVICES</a></li>
           <li><img src="styles/img/header-nav-bar.png"</li>
           <li><a href="blog.html">BLOG</a></li>
           <li><img src="styles/img/header-nav-bar.png"</li>
@@ -44,8 +44,7 @@
       </nav>
     </header>
     
-   
-  <footer>
+   <footer>
       <div>
         <img src="styles/img/logo.png" alt="Vandesign Logo"> 
         <p>GRAPHIC DESIGN &amp; ART DIRECTION</p>
