--- a/code/app/blog.html
+++ b/code/app/blog.html
@@ -31,11 +31,11 @@
         <ul>
           <li><a href="index.html">HOME</a></li>
           <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="work.html">WORK</a></li>
+          <li><a href="portfolio.html">PORTFOLIO</a></li>
           <li><img src="styles/img/header-nav-bar.png"</li>
           <li><a href="about.html">ABOUT</a></li>
           <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="pages.html">PAGES</a></li>
+          <li><a href="services.html">SERVICES</a></li>
           <li><img src="styles/img/header-nav-bar.png"</li>
           <li><a href="blog.html" class="selected">BLOG</a></li>
           <li><img src="styles/img/header-nav-bar.png"</li>
