adjustments made in header-home and header-internal based on comments

--- a/code/app/index.html
+++ b/code/app/index.html
@@ -25,21 +25,16 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <header class="header-home">
-      <img src="styles/img/logo.png" alt="Vandesign Logo">
+    <header class="header-home top-header">
+      <a href="index.html"><img src="img/logo.png" alt="Vandesign Logo"></a>
       <nav>
         <ul>
-          <li><a href="index.html" class="selected">HOME</a></li>
-          <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="portfolio.html">PORTFOLIO</a></li>
-          <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="about.html">ABOUT</a></li>
-          <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="services.html">SERVICES</a></li>
-          <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="blog.html">BLOG</a></li>
-          <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="index.html" class="selected">home</a></li>
+          <li><a href="portfolio.html">portfolio</a></li>
+          <li><a href="about.html">about</a></li>
+          <li><a href="services.html">services</a></li>
+          <li><a href="blog.html">blog</a></li>
+          <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
     </header>
@@ -51,17 +46,17 @@
     </div>
     <div>
       <div>
-        <img src="styles/img/ink-drop.png" alt="ink drop"> 
+        <img src="img/ink-drop.png" alt="ink drop"> 
         <h4>BRAND &amp; IDENTITY</h4>
         <p>Appropriately benchmark prospective meta-services and client&ndash;centerec relationships. Globally pursue one&ndash;to&ndash;one materials via proactive alignments clicks&ndash;and&ndash;mortar total linkage after 24 &frasl; 365 materials</p>
       </div>
       <div>
-        <img src="styles/img/magic-bar.png" alt="magic bar"> 
+        <img src="img/magic-bar.png" alt="magic bar"> 
         <h4>WEB DEVELOPMENT</h4>
         <p>Appropriately benchmark prospective meta-services and client&ndash;centerec relationships. Globally pursue one&ndash;to&ndash;one materials via proactive alignments clicks&ndash;and&ndash;mortar total linkage after 24 &frasl; 365 materials</p>
       </div>
       <div>
-        <img src="styles/img/camera.png" alt="camera"> 
+        <img src="img/camera.png" alt="camera"> 
         <h4>PHOTOGRAFHY</h4>
         <p>Appropriately benchmark prospective meta-services and client&ndash;centerec relationships. Globally pursue one&ndash;to&ndash;one materials via proactive alignments clicks&ndash;and&ndash;mortar total linkage after 24 &frasl; 365 materials</p>
       </div>
@@ -146,23 +141,23 @@
     </div>
     <footer>
       <div>
-        <img src="styles/img/logo.png" alt="Vandesign Logo"> 
+        <img src="img/logo.png" alt="Vandesign Logo"> 
         <h5>GRAPHIC DESIGN &amp; ART DIRECTION</h5>
         <ul>
-          <li><img src="styles/img/twitter-logo.png" alt="twitter logo"></li>
-          <li><img src="styles/img/be-logo.png" alt="be logo"></li>
-          <li><img src="styles/img/t-logo.png" alt="t logo"></li>
-          <li><img src="styles/img/bol-logo.png" alt="bol logo"></li>
+          <li><img src="img/twitter-logo.png" alt="twitter logo"></li>
+          <li><img src="img/be-logo.png" alt="be logo"></li>
+          <li><img src="img/t-logo.png" alt="t logo"></li>
+          <li><img src="img/bol-logo.png" alt="bol logo"></li>
         </ul>
       </div>
       <div>
-        <img src="styles/img/twitter-logo.png" alt="twitter logo"> 
+        <img src="img/twitter-logo.png" alt="twitter logo"> 
         <h5>&#64;vandesign</h5>
         <p>vivamus suscipit tortor eget felis porttitor atc volutpat pellentesque in lipsum</p>
         <p>http://t.co/UluBPMcyfc</p>
       </div>
       <div>
-        <img src="styles/img/instagram-logo.png" alt="instagram logo">
+        <img src="img/instagram-logo.png" alt="instagram logo">
         <h5>&#35;vandesign</h5>
         <ul>
           <li></li>
