--- a/code/app/portfolio.html
+++ b/code/app/portfolio.html
@@ -25,45 +25,40 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <header class="header-internal">
-      <img src="styles/img/logo.png" alt="Vandesign Logo" class="logo-header">
+    <header class="header-internal top-header">
+      <a href="index.html"><img src="img/logo.png" alt="Vandesign Logo" class="logo-header"></a>
       <nav>
         <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="portfolio.html" class="selected">PORTFOLIO</a></li>
-          <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="about.html">ABOUT</a></li>
-          <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="services.html">SERVICES</a></li>
-          <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="blog.html">BLOG</a></li>
-          <li><img src="styles/img/header-nav-bar.png"</li>
-          <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="portfolio.html" class="selected">portfolio</a></li>
+          <li><a href="about.html">about</a></li>
+          <li><a href="services.html">services</a></li>
+          <li><a href="blog.html">blog</a></li>
+          <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
     </header>
     
    
-  <footer>
+    <footer>
       <div>
-        <img src="styles/img/logo.png" alt="Vandesign Logo"> 
-        <p>GRAPHIC DESIGN &amp; ART DIRECTION</p>
+        <img src="img/logo.png" alt="Vandesign Logo"> 
+        <h5>GRAPHIC DESIGN &amp; ART DIRECTION</h5>
         <ul>
-          <li><img src="styles/img/twitter-logo.png" alt="twitter logo"></li>
-          <li><img src="styles/img/be-logo.png" alt="be logo"></li>
-          <li><img src="styles/img/t-logo.png" alt="t logo"></li>
-          <li><img src="styles/img/bol-logo.png" alt="bol logo"></li>
+          <li><img src="img/twitter-logo.png" alt="twitter logo"></li>
+          <li><img src="img/be-logo.png" alt="be logo"></li>
+          <li><img src="img/t-logo.png" alt="t logo"></li>
+          <li><img src="img/bol-logo.png" alt="bol logo"></li>
         </ul>
       </div>
       <div>
-        <img src="styles/img/twitter-logo.png" alt="twitter logo"> 
+        <img src="img/twitter-logo.png" alt="twitter logo"> 
         <h5>&#64;vandesign</h5>
         <p>vivamus suscipit tortor eget felis porttitor atc volutpat pellentesque in lipsum</p>
         <p>http://t.co/UluBPMcyfc</p>
       </div>
       <div>
-        <img src="styles/img/instagram-logo.png" alt="instagram logo">
+        <img src="img/instagram-logo.png" alt="instagram logo">
         <h5>&#35;vandesign</h5>
         <ul>
           <li></li>
