footer markup 90%  and header-internal alignment problem solved

--- a/code/app/index.html
+++ b/code/app/index.html
@@ -140,8 +140,8 @@
       </div>
     </div>
     <footer>
-      <div>
-        <img src="img/logo.png" alt="Vandesign Logo"> 
+      <div class="footer-van">
+        <a href="index.html"><img src="img/logo.png" alt="Vandesign Logo" class="footer-van-logo"></a>
         <h5>GRAPHIC DESIGN &amp; ART DIRECTION</h5>
         <ul>
           <li><img src="img/twitter-logo.png" alt="twitter logo"></li>
@@ -150,13 +150,13 @@
           <li><img src="img/bol-logo.png" alt="bol logo"></li>
         </ul>
       </div>
-      <div>
+      <div class="footer-twit">
         <img src="img/twitter-logo.png" alt="twitter logo"> 
         <h5>&#64;vandesign</h5>
         <p>vivamus suscipit tortor eget felis porttitor atc volutpat pellentesque in lipsum</p>
         <p>http://t.co/UluBPMcyfc</p>
       </div>
-      <div>
+      <div class=footer-inst>
         <img src="img/instagram-logo.png" alt="instagram logo">
         <h5>&#35;vandesign</h5>
         <ul>
@@ -165,7 +165,7 @@
           <li></li>
         </ul>
       </div>
-      <div>
+      <div class="footer-copy">
         <p>&copy; 2014 Vandesign. All rights reserved.</p>
       </div>
     </footer>
