Header and footer revised in IE9. Problems solved  in IE9 with normalize.css. Footer aligned, issue #3 95%

--- a/code/app/index.html
+++ b/code/app/index.html
@@ -14,7 +14,9 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link href='http://fonts.googleapis.com/css?family=Raleway:300,500,400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400italic,700italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <!--[if IE]><link rel="stylesheet" href="styles/styles-ie.css"><![endif]-->
     <!-- endbuild -->
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -22,9 +24,6 @@
 
   </head>
   <body>
-    <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
     <header class="header-home top-header">
       <a href="index.html"><img src="img/logo.png" alt="Vandesign Logo"></a>
       <nav>
@@ -38,8 +37,8 @@
         </ul>
       </nav>
     </header>
-    <div>
-      <p>Qormulate progressive resources vis&ndash;a&ndash;vis user&ndash;centric <strong>potentialities tivate</strong> front&ndash;end paradigms after competitive <strong>strategic theme</strong> areas</p>
+    <div class="slogan">
+      <p>Qormulate progressive resources vis&#45;a&#45;vis user&#45;centric <strong>potentialities tivate</strong> front&#45;end paradigms after competitive <strong>strategic theme</strong> areas</p>
       <a href="about.html">
         <p>More about us</p>
       </a>
