--- a/code/app/index.html
+++ b/code/app/index.html
@@ -44,17 +44,17 @@
       </a>
     </div>
     <div>
-      <div>
+      <div class="brand">
         <img src="img/ink-drop.png" alt="ink drop"> 
         <h4>BRAND &amp; IDENTITY</h4>
         <p>Appropriately benchmark prospective meta-services and client&ndash;centerec relationships. Globally pursue one&ndash;to&ndash;one materials via proactive alignments clicks&ndash;and&ndash;mortar total linkage after 24 &frasl; 365 materials</p>
       </div>
-      <div>
+      <div class="brand">
         <img src="img/magic-bar.png" alt="magic bar"> 
         <h4>WEB DEVELOPMENT</h4>
         <p>Appropriately benchmark prospective meta-services and client&ndash;centerec relationships. Globally pursue one&ndash;to&ndash;one materials via proactive alignments clicks&ndash;and&ndash;mortar total linkage after 24 &frasl; 365 materials</p>
       </div>
-      <div>
+      <div class="brand">
         <img src="img/camera.png" alt="camera"> 
         <h4>PHOTOGRAFHY</h4>
         <p>Appropriately benchmark prospective meta-services and client&ndash;centerec relationships. Globally pursue one&ndash;to&ndash;one materials via proactive alignments clicks&ndash;and&ndash;mortar total linkage after 24 &frasl; 365 materials</p>
