Home finished without opacity in the gallery

--- a/code/app/index.html
+++ b/code/app/index.html
@@ -39,30 +39,29 @@
     </header>
     <div class="slogan">
       <p>Qormulate progressive resources vis&#45;a&#45;vis user&#45;centric <strong>potentialities tivate</strong> front&#45;end paradigms after competitive <strong>strategic theme</strong> areas</p>
-      <a href="about.html">
-        <p>More about us</p>
-      </a>
+      <a href="about.html">More about us</a>
     </div>
     <div>
-      <div>
+      <div class="brand">
         <img src="img/ink-drop.png" alt="ink drop"> 
         <h4>BRAND &amp; IDENTITY</h4>
-        <p>Appropriately benchmark prospective meta-services and client&ndash;centerec relationships. Globally pursue one&ndash;to&ndash;one materials via proactive alignments clicks&ndash;and&ndash;mortar total linkage after 24 &frasl; 365 materials</p>
+        <p>Appropriately benchmark prospective meta-services and client&#45;centerec relationships. Globally pursue one&#45;to&#45;one materials via proactive alignments.<br> clicks&#45;and&#45;mortar total linkage after 24&frasl;365 materials</p>
       </div>
-      <div>
+      <div class="brand">
         <img src="img/magic-bar.png" alt="magic bar"> 
         <h4>WEB DEVELOPMENT</h4>
-        <p>Appropriately benchmark prospective meta-services and client&ndash;centerec relationships. Globally pursue one&ndash;to&ndash;one materials via proactive alignments clicks&ndash;and&ndash;mortar total linkage after 24 &frasl; 365 materials</p>
+        <p>Appropriately benchmark prospective meta-services and client&#45;centerec relationships. Globally pursue one&#45;to&#45;one materials via proactive alignments.<br> clicks&#45;and&#45;mortar total linkage after 24&frasl;365 materials</p>
       </div>
-      <div>
+      <div class="brand">
         <img src="img/camera.png" alt="camera"> 
         <h4>PHOTOGRAFHY</h4>
-        <p>Appropriately benchmark prospective meta-services and client&ndash;centerec relationships. Globally pursue one&ndash;to&ndash;one materials via proactive alignments clicks&ndash;and&ndash;mortar total linkage after 24 &frasl; 365 materials</p>
+        <p>Appropriately benchmark prospective meta-services and client&#45;centerec relationships. Globally pursue one&#45;to&#45;one materials via proactive alignments.<br> clicks&#45;and&#45;mortar total linkage after 24&frasl;365 materials</p>
       </div>
     </div>
     <div>
-      <nav>
+      <nav class="nav-gallery">
         <ul>
+          <li><button></button></li>
           <li>Show all</li>
           <li>Branding</li>
           <li>Marketing</li>
@@ -70,40 +69,20 @@
           <li>Photography</li>
         </ul>
       </nav>
-      <ul>
+      <ul Class="gallery-home">
+        <li></li>
+        <li></li>
+        <li></li>
         <li>
-          <a href="http://placehold.it/370x370">
-            <img src="http://placehold.it/370x370" alt="">
-          </a>
+        <h4>disk &amp; envelop</h4>
+        <p>branding</p> 
+        <p>&hearts;12</p>
         </li>
-        <li>
-          <a href="http://placehold.it/370x370">
-            <img src="http://placehold.it/370x370" alt="">
-          </a>
-        </li>
-        <li>
-          <a href="http://placehold.it/370x370">
-            <img src="http://placehold.it/370x370" alt="">
-          </a>
-        </li>
-        <li>
-          <a href="http://placehold.it/370x370">
-            <img src="http://placehold.it/370x370" alt="">
-          </a>
-        </li>
-        <li>
-          <a href="http://placehold.it/370x370">
-            <img src="http://placehold.it/370x370" alt="">
-          </a>
-        </li>
-        <li>
-          <a href="http://placehold.it/370x370">
-            <img src="http://placehold.it/370x370" alt="">
-          </a>
-        </li>
+        <li></li>
+        <li></li>
       </ul> 
     </div>
-    <div>
+    <div class="statistics">
       <div>
         <h3>120</h3>
         <p>PROJECT COMPLETE</p>
@@ -121,21 +100,16 @@
         <p>AWARD WINNING</p>
       </div>
     </div>
-    <div>
+    <div class="comments">
       <div>
         <h4>BEST SERVICES</h4>
         <p>Dynamically enable vertical collaboration and idea&ndash;sharing whereas standardized scenarios. conveniently negotiate functional methodologies after bleeding&ndash;edge partnerships</p>
-        <a href="pages.html">
-          <p>SERVICES</p>
-        </a>
-          
+        <a href="services.html">SERVICES</a>    
       </div>
       <div>
         <h4>OUR BLOG</h4>
         <p>Dynamically enable vertical collaboration and idea&ndash;sharing whereas standardized scenarios. conveniently negotiate functional methodologies after bleeding&ndash;edge partnerships</p>
-        <a href="blog.html">
-          <p>ALL POST</p>
-        </a>
+        <a href="blog.html">ALL POST</a>
       </div>
     </div>
     <footer>
