--- a/code/app/404.html
+++ b/code/app/404.html
@@ -21,6 +21,7 @@
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
+
   </head>
   <body>
     <header class="header-internal top-header">
@@ -28,7 +29,7 @@
       <nav>
         <ul>
           <li><a href="index.html">home</a></li>
-          <li><a href="portfolio.html" class="selected">portfolio</a></li>
+          <li><a href="portfolio.html">portfolio</a></li>
           <li><a href="about.html">about</a></li>
           <li><a href="services.html">services</a></li>
           <li><a href="blog.html">blog</a></li>
@@ -36,7 +37,13 @@
         </ul>
       </nav>
     </header>
-   
+    <section class="error404">
+      <div>
+        <h4>sorry, page not found &#33;</h4>
+        <p>Apologies, but the page you requested could not be found. Perhaps searching will help</p>
+        <p class="links404">Back to <a href="index.html">home</a> or<a href="contact.html"> contact us</a></p> 
+      </div>
+    </section>
     <footer>
       <div class="footer-van">
         <a href="index.html"><img src="img/logo.png" alt="Vandesign Logo" class="footer-van-logo"></a>
