--- a/code/app/about.html
+++ b/code/app/about.html
@@ -12,7 +12,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link href='http://fonts.googleapis.com/css?family=Raleway:300,500,400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:300,500,400,600,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
@@ -36,6 +36,10 @@
           <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
+    </header>
+    <header class="header-about">
+      <h3>a dream of a team</h3>
+      <p>creating the most beautifull design</p>
     </header>
     
     <footer>
