--- a/code/app/about.html
+++ b/code/app/about.html
@@ -38,9 +38,49 @@
       </nav>
     </header>
     <header class="header-about">
-      <h3>a dream of a team</h3>
-      <p>creating the most beautifull design</p>
+      <div> 
+        <h3>a dream of a team</h3>
+        <p>creating the most beautifull design</p>
+      </div>
     </header>
+    <section class="about-van">
+      <h2>Vanstudio is a graphic design and art direction studio based in Ha noi, Viet nam. </h2>
+      <p>Seamlessly restore client&#45;focused potentialities rather than functional strategic theme areas. Credibly e&#45;enable value&#45;added portals with clicks&#45;and&#45;mortar initiatives. Synergistically procrastinate excellent partnerships rather than customized supply chains.</p>
+    </section>
+    <section class="about-history">
+      <ul>
+        <li>
+          <h4>history</h4>
+          <p>Distinctively implement user&#45;centric opportunities for future&#45;proof. Objectively exploit long&#45;term high&#45;impact benefits<br> vis&#45;a&#45;vis revolutionary<br>supply. Synergistically enhance cutting meta&#45;services vis&#45;a&#45;vis client&#45;centric methodologies.</p>
+          <p>Distinctively deliver 24&frasl;365 communities be virtual networks. Seamlessly maintain diverse imperatives before equity invested</p>
+        </li>
+        <li></li>
+        <li>
+          <h4>capabilities</h4>
+          <p>Distinctively implement user&#45;centric opportunities for future&#45;proof. Objectively exploit long&#45;term high&#45;impact benefits<br> vis&#45;a&#45;vis revolutionary<br>supply. Synergistically enhance cutting meta&#45;services vis&#45;a&#45;vis client&#45;centric methodologies.</p>
+          <p>Distinctively deliver 24&frasl;365 communities be virtual networks. Seamlessly maintain diverse imperatives before equity invested</p>
+        </li>
+        <li></li>
+        <li>
+          <h4>how we do it</h4>
+          <p>Distinctively implement user&#45;centric opportunities for future&#45;proof. Objectively exploit long&#45;term high&#45;impact benefits<br> vis&#45;a&#45;vis revolutionary<br>supply. Synergistically enhance cutting meta&#45;services vis&#45;a&#45;vis client&#45;centric methodologies.</p>
+          <p>Distinctively deliver 24&frasl;365 communities be virtual networks. Seamlessly maintain diverse imperatives before equity invested</p>  
+        </li>
+        <li></li>
+      </ul> 
+    </section>
+    <div class="comments">
+      <div>
+        <h4>join our teams</h4>
+        <p>Dynamically enable vertical collaboration and idea&ndash;sharing whereas standardized scenarios. conveniently negotiate functional methodologies after bleeding&ndash;edge partnerships</p>
+        <a>sumbit your resume</a>    
+      </div>
+      <div>
+        <h4>love our work</h4>
+        <p>Dynamically enable vertical collaboration and idea&ndash;sharing whereas standardized scenarios. conveniently negotiate functional methodologies after bleeding&ndash;edge partnerships</p>
+        <a href="services.html">services</a>
+      </div>
+    </div>
     
     <footer>
       <div class="footer-van">
