404 95% changes made based on e-mail comments

--- a/code/app/404.html
+++ b/code/app/404.html
@@ -40,7 +40,7 @@
     <section class="error404">
       <div>
         <h4>sorry, page not found &#33;</h4>
-        <p>Apologies, but the page you requested could not be found. Perhaps searching will help</p>
+        <p>Apologies, but the page you requested could not be found</p>
         <p class="links404">Back to <a href="index.html">home</a> or<a href="contact.html"> contact us</a></p> 
       </div>
     </section>
