about internal finished

--- a/code/app/about.html
+++ b/code/app/about.html
@@ -69,6 +69,35 @@
         <li></li>
       </ul> 
     </section>
+    <section class="our-team">
+      <img src="img/logo-our-team.png" alt="logo-our-team">
+      <h4>our teams</h4>
+      <p>Completely formulate viral scenarios vis&#45;a&#45;vis functionalized web services. Proactively incubate corporate content before principle&#45;centered synergy</p>
+    </section>
+    <section class="teams-members">
+      <ul>
+        <li>
+          <img src="http://placehold.it/270x294/7a7a7a">
+          <h4>robert smith</h4>
+          <p>Creative Director</p>
+        </li>
+        <li>
+          <img src="http://placehold.it/270x294/7a7a7a">
+          <h4>eric fensterheim</h4>
+          <p>Senior IU&frasl;UX Designer</p>
+        </li>
+        <li>
+          <img src="http://placehold.it/270x294/7a7a7a">
+          <h4>misa rodriguez</h4>
+          <p>Design Intern</p>
+        </li>
+        <li>
+          <img src="http://placehold.it/270x294/7a7a7a">
+          <h4>deroy peraza</h4>
+          <p>Creative Director</p>
+        </li>
+      </ul>
+    </section>
     <div class="comments">
       <div>
         <h4>join our teams</h4>
@@ -81,7 +110,6 @@
         <a href="services.html">services</a>
       </div>
     </div>
-    
     <footer>
       <div class="footer-van">
         <a href="index.html"><img src="img/logo.png" alt="Vandesign Logo" class="footer-van-logo"></a>
