--- a/code/app/about.html
+++ b/code/app/about.html
@@ -37,7 +37,7 @@
         </ul>
       </nav>
     </header>
-    <header class="header-about">
+    <header class="header-internals">
       <div> 
         <h3>a dream of a team</h3>
         <p>creating the most beautifull design</p>
