issue #10 blog-detail-internal 100% with small style problems in IE9 and firefox

--- a/code/app/blog-detail.html
+++ b/code/app/blog-detail.html
@@ -12,7 +12,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link href='http://fonts.googleapis.com/css?family=Raleway:300,500,400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:300,500,400,600,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
@@ -60,7 +60,6 @@
       <p>Professionally synthesize client&#45;based information without client&#45;centric materials. Interactively evisculate distinctive quality vectors vis&#45;a&#45;vis dynamic sources. Enthusiastically restore scalable data whereas bleeding&#45;edge users. Appropriately formulate collaborative web services with best&#45;of&#45;breed catalysts for change. Energistically plagiarize high standards in customer service after installed base users.</p>
       <p><em>Tags : Music, Design, Heath</em></p> 
     </article>
-    
     <div class="categories">
       <h4>categories</h4>
       <ul>
@@ -96,6 +95,10 @@
       <a>Previus Post</a>
       <a>Next Post</a>
     </div>
+    <div class="tags">
+      <h4>tags cloud</h4>
+      <p> Design, Health, Photography, Music Ideas, Creative, Wordpress</p>
+    </div>
     <section class="blog-comments">
     <h3>comments &#40;4&#41;</h3>
     <article>
@@ -107,7 +110,7 @@
         <p>Nulla quis lorem ut libero malesuada feugiat. Vivamus suscipit tortor eget felis porttitor volutpat. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur arcu erat, accumsan id imperdiet et</p>
       </div>
     </article>
-    <article>
+    <article class="message-indent">
       <img src="http://placehold.it/100x100/b9b9b9">
       <div class="message">
         <h4>zankover</h4>
@@ -125,13 +128,16 @@
         <p>Nulla quis lorem ut libero malesuada feugiat. Vivamus suscipit tortor eget felis porttitor volutpat. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur arcu erat, accumsan id imperdiet et</p>
       </div>
     </article>
+    <form class="leave-reply">
+      <h3>leave a reply</h3>
+      <input type="text" name="name" placeholder="Name">
+      <input type="email" name="email" placeholder="Email">
+      <input type="url" name="website" placeholder="Website">
+      <textarea name="comment" placeholder="Comment"></textarea>
+      <button>submit</button>
+      </form>
     </section>
-    <div class="tags">
-      <h4>tags cloud</h4>
-      <p> Design, Health, Photography, Music Ideas, Creative, Wordpress</p>
-    </div>
     </section>
-    
     <footer>
       <div class="footer-van">
         <a href="index.html"><img src="img/logo.png" alt="Vandesign Logo" class="footer-van-logo"></a>
