--- a/code/app/blog-detail.html
+++ b/code/app/blog-detail.html
@@ -168,6 +168,7 @@
         <p>&copy; 2014 Vandesign. All rights reserved.</p>
       </div>
     </footer>
+    <script src="js/libs/placeholders.min.js"></script>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
