issue #11 contact-internal 100%

--- a/code/app/contact.html
+++ b/code/app/contact.html
@@ -12,7 +12,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link href='http://fonts.googleapis.com/css?family=Raleway:300,500,400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:300,500,400,600,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
@@ -24,7 +24,6 @@
 
   </head>
   <body>
-   
     <header class="header-internal top-header">
       <a href="index.html"><img src="img/logo.png" alt="Vandesign Logo" class="logo-header"></a>
       <nav>
@@ -38,7 +37,43 @@
         </ul>
       </nav>
     </header>
-    
+    <header class="header-internals">
+      <div> 
+        <h3>let's work together</h3>
+        <p>Authoritatively evisculate impactful</p>
+      </div>
+    </header>
+    <section class="contact-info">
+      <div>
+        <img src="img/contact-phone.png">
+        <h3>&#43;1 &#40;415&#41; 521&#45;8775&#45;123</h3>
+      </div>
+      <div>
+        <img src="img/contact-position.png">
+        <h3>121 King Street, Melbourne, Victoria 3000 Australia</h3>
+      </div>
+      <div>
+        <img src="img/contact-mail.png">
+        <h3>sayhello&#64;vandesign.com</h3>
+      </div>
+      <p>Uniquely negotiate equity invested systems and high standards in applications. Energistically maintain proactive manufactured products for client&#45;centered users</p>
+    </section>
+    <form class="contact-form">
+      <fieldset class="personal-info">         
+        <label for="name">Your Name &#40;required&#41;</label>   
+        <input type="text" id="name" name="name">
+        <label for="email">Your Email &#40;required&#41;</label>   
+        <input type="email" id="email" name="email">
+        <label for="subjet">Subject</label>   
+        <input type="text" id="subjet" name="subject">
+      </fieldset>
+      <fieldset class="contact-message">
+        <label for="message">Your Message</label>
+        <textarea id="message" name="message"></textarea>
+      </fieldset>
+      <button>submit</button>
+    </form>
+    <img src="img/contact-map.png" class="contact-map" alt="location map">
     <footer>
       <div class="footer-van">
         <a href="index.html"><img src="img/logo.png" alt="Vandesign Logo" class="footer-van-logo"></a>
