--- a/code/app/portfolio.html
+++ b/code/app/portfolio.html
@@ -12,7 +12,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link href='http://fonts.googleapis.com/css?family=Raleway:300,500,400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:300,500,400,600,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
@@ -36,7 +36,38 @@
         </ul>
       </nav>
     </header>
-   
+    <header class="header-internals header-portfolio">
+      <div> 
+        <h3>awesome work</h3>
+        <p>Dramatically scale impactful bandwidth with just in time technology</p>
+      </div>
+    </header>
+    <section class="portfolio-works"> 
+      <nav class="nav-gallery nav-portfolio">
+        <button></button>
+        <ul>
+          <li>Show all</li>
+          <li>Branding</li>
+          <li>Marketing</li>
+          <li>Motion</li>
+          <li>Photography</li>
+        </ul>
+      </nav>
+      <ul Class="gallery-home gallery-portfolio">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul> 
+    </section>  
     <footer>
       <div class="footer-van">
         <a href="index.html"><img src="img/logo.png" alt="Vandesign Logo" class="footer-van-logo"></a>
