--- a/code/app/services.html
+++ b/code/app/services.html
@@ -12,7 +12,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link href='http://fonts.googleapis.com/css?family=Raleway:300,500,400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:300,500,400,600,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
@@ -21,10 +21,8 @@
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
-
   </head>
   <body>
-
     <header class="header-internal top-header">
       <a href="index.html"><img src="img/logo.png" alt="Vandesign Logo" class="logo-header"></a>
       <nav>
@@ -38,7 +36,48 @@
         </ul>
       </nav>
     </header>
-    
+    <header class="header-internals">
+      <div> 
+        <h3>we love what we do</h3>
+        <p>Creating the most beautiful designs</p>
+      </div>
+    </header>
+    <section class="about-van services-info">
+      <h2>We build the platforms, products, and experiences that transform businesses and help them thrive.</h2>
+      <p>Seamlessly restore client&#45;focused potentialities rather than functional strategic theme areas. Credibly e&#45;enable value&#45;added portals with clicks&#45;and&#45;mortar initiatives. Synergistically procrastinate excellent partnerships rather than customized supply chains.</p>
+    </section>
+    <section>
+      <div class="brand brand-services">
+        <img src="img/ink-drop.png" alt="ink drop"> 
+        <h4>BRAND &amp; IDENTITY</h4>
+        <p>Appropriately benchmark prospective meta-services and client&#45;centerec relationships. Globally pursue one&#45;to&#45;one materials via proactive alignments.<br> clicks&#45;and&#45;mortar total linkage after 24&frasl;365 materials</p>
+      </div>
+      <div class="brand brand-services">
+        <img src="img/magic-bar.png" alt="magic bar"> 
+        <h4>WEB DEVELOPMENT</h4>
+        <p>Appropriately benchmark prospective meta-services and client&#45;centerec relationships. Globally pursue one&#45;to&#45;one materials via proactive alignments.<br> clicks&#45;and&#45;mortar total linkage after 24&frasl;365 materials</p>
+      </div>
+      <div class="brand brand-services">
+        <img src="img/camera.png" alt="camera"> 
+        <h4>PHOTOGRAFHY</h4>
+        <p>Appropriately benchmark prospective meta-services and client&#45;centerec relationships. Globally pursue one&#45;to&#45;one materials via proactive alignments.<br> clicks&#45;and&#45;mortar total linkage after 24&frasl;365 materials</p>
+      </div>
+    </section>
+    <section class="services-quotation">
+      <h3>&quot;Collaboratively cultivate professional leadership skills after end&#45;to&#45;end strategic theme areas. Phosfluorescently benchmark principle&#45;centered technology after focused content &rdquo;</h3>
+      <h4>Robert Smith</h4>
+      <h5>Business Manager &frasl; Geckoo.com</h5>
+    </section> 
+    <section class="services-worked">
+      <h4>We've worked with</h4>
+      <ul>
+        <li><p>Logo here</p></li>
+        <li><p>Logo here</p></li>
+        <li><p>Logo here</p></li>
+        <li><p>Logo here</p></li>
+        <li><p>Logo here</p></li>
+      </ul>
+    </section> 
     <footer>
       <div class="footer-van">
         <a href="index.html"><img src="img/logo.png" alt="Vandesign Logo" class="footer-van-logo"></a>
